@@ -1,5 +1,22 @@
 INCLUDES=@all_includes@
 
+EXTRA_DIST=\
+ windows/Makefile.am \
+ windows/libloader_p.h \
+ windows/directory.c \
+ windows/inetaddr.c \
+ windows/inetsocket.c \
+ windows/libloader.c \
+ posix/Makefile.am \
+ posix/directory_p.h \
+ posix/inetaddr_p.h \
+ posix/inetsocket_p.h \
+ posix/libloader_p.h \
+ posix/directory.c \
+ posix/inetaddr.c \
+ posix/inetsocket.c \
+ posix/libloader.c
+
 SUBDIRS=@GWEN_OS@
 
 iheaderdir=${includedir}/gwenhyfwar
