@@ -1,6 +1,11 @@
 $Id$
 
 
+===========================================================================
+MARK: released gwenhywfar-0.9beta1 (2003/10/27)
+===========================================================================
+
+
 2003/10/27 Martin Preuss <martin@libchipcard.de>
 ------------------------------------------------
 - improved API documentation
